force-app/main/default/objects/CPQ_Field_Mapping__mdt/CPQ_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>CPQ Field Mapping</label>
    <pluralLabel>CPQ Field Mappings</pluralLabel>
</CustomObject>