force-app/main/default/objects/CPQ_Field_Mapping__mdt/fields/Destination_Object__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object__c</fullName>
    <label>Destination Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>SAP_Order__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Quote__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__QuoteLine__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Subscription__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>