force-app/main/default/objects/CPQ_Field_Mapping__mdt/fields/Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object__c</fullName>
    <label>Lookup Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>