force-app/main/default/objects/CPQ_Field_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <columns>Category__c</columns>
    <columns>Destination_Field__c</columns>
    <columns>Destination_Object__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Lookup_Object__c</columns>
    <columns>FieldType__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>